[package]
name = "enum_router"
version = "0.1.0"
edition = "2021"


[workspace]
members = [
  "enum_router_macro"
]

[dependencies]
enum_router_macro = { path = "enum_router_macro", version = "0.1.0" }
axum-core = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.4.13" }
axum = { version = "0.6" }


[features]
axum = ["axum-core"]

