[package]
name = "enum_router"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "enum_router_macro"
]

[dependencies]
enum_router_macro = { path = "enum_router_macro", version = "0.1.0" }
axum-core = { version = "0.5" }

[dev-dependencies]
serde = { version = "1", features = ["serde_derive", "derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.5", features = ["util"] }
axum = { version = "0.8" }

[[test]]
name = "integration_test"
test = true
